Fix some issue
Fix review slider issue, fix media query issue. Note: This website still not responsive!

--- a/css/style.css
+++ b/css/style.css
@@ -488,17 +488,23 @@ nav ul li a {
 }
 
 .review-card-slider {
-    display: block;
+    padding: 2em;
+    display: flex;
+    overflow-x: auto;
     overflow: hidden;
+    /* gap: 2em; */
+    width: 100%;
     height: 30em; /* Adjust height as needed */
     position: relative;
+    scroll-behavior: smooth;
 }
 
 .review-card {
-    display: block;
+    /* margin-right: 20px; */
+    flex: 0 0 auto;
     padding: 3em 4em;
-    width: calc(100% - 2em); /* Adjust width based on container width and gap */
-    /* margin-bottom: 10em; */
+    /* width: calc(100% - 2em); */
+    width: 100%;
 
     color: white;
     background-color: rgba(211, 211, 211, 0.3);
@@ -510,13 +516,21 @@ nav ul li a {
     transition: transform 0.5s ease-in-out;
 }
 
-.review-card:first-child {
+.review-card:nth-child(2) {
+    margin-left: 2em;
+}
+.review-card:nth-child(3) {
+    margin-left: 4em;
+}
+
+
+/* .review-card:first-child {
     margin-top: 2em;
 }
 
 .review-card:not(:first-child) {
     margin-top: 5em;
-}
+} */
 
 .review-card-header {
     display: flex;
@@ -843,6 +857,39 @@ nav ul li a {
     .cont-two-text p {
         margin: 1em  0 0 0;
         width: 100%;
+    }
+
+    /* REVIEW SLIDER */
+    .cont-three-wrap {
+        grid-template-rows: auto 400px;
+        gap: 1em;
+    }
+
+    .review-card-slider-wrap {
+        grid-column: 1 / 3;
+    }
+
+    .review-card-text {
+        align-self: start;
+        height: 50%;
+        grid-row: 2;
+        grid-column: 1 / 3;
+        grid-auto-flow: column;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .review-card-text p {
+        width: 100%;
+        align-self: center;
+    }
+
+    .review-card-nav {
+        grid-column: 1 / 3;
+        order: 1;
+    }
+    .review-card-nav {
+        justify-content: space-between;
     }
 
   }
